<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/task_card_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_green"
        app:titleTextColor="@color/white_smoke"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/task_card_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <EditText
                android:id="@+id/task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:maxLines="1"
                android:hint="@string/project_name"
                android:autofillHints="@string/project_name"
                android:inputType="text"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/deadline"
                android:text="no time assigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:inputType="text"/>

<!--            <EditText-->
<!--                android:id="@+id/task_description"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="24sp"-->
<!--                android:maxLines="16"-->
<!--                android:hint="@string/project_description"-->
<!--                android:autofillHints="@string/project_description"-->
<!--                android:inputType="text" />-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="8dp"-->
<!--                    android:layout_marginBottom="8dp"-->
<!--                    android:text="@string/subtasks"/>-->

<!--                <TextView-->
<!--                    android:id="@+id/add_subtask"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/new_subtask"/>-->

<!--                <androidx.recyclerview.widget.RecyclerView-->
<!--                    android:id="@+id/subtasks_recycler"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginBottom="16dp"-->
<!--                    android:isScrollContainer="false" />-->

<!--            </LinearLayout>-->

            <Button
                android:id="@+id/set_time_btn"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/set_time_button"/>

            <Button
                android:id="@+id/reminder_btn"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/Add_reminder"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>